--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8168b5">  <td>24/07/07 09:32:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelBookerApi.setBaseURI()[pri:0, instance:CRUD.HotelBookerApi@2a556333]">&gt;&gt;setBaseURI</td> 
+<tr bgcolor="a9dace">  <td>24/07/20 12:46:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateToken.generateToken()[pri:0, instance:HotelBooking.CreateToken@2a742aa2]">generateToken</td> 
+  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="a9dace">  <td>24/07/20 12:46:40</td>   <td>-778</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateToken.setBaseURI()[pri:0, instance:HotelBooking.CreateToken@2a742aa2]">&gt;&gt;setBaseURI</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>24/07/07 09:32:32</td>   <td>6492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookerApi.createBooking()[pri:2, instance:CRUD.HotelBookerApi@2a556333]">createBooking</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>24/07/07 09:32:26</td>   <td>926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookerApi.createToken()[pri:1, instance:CRUD.HotelBookerApi@2a556333]">createToken</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>24/07/07 09:32:33</td>   <td>7834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookerApi.getBooking()[pri:3, instance:CRUD.HotelBookerApi@2a556333]">getBooking</td> 
-  <td>main@278934944</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>24/07/07 09:32:35</td>   <td>9203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookerApi.updateBooking()[pri:4, instance:CRUD.HotelBookerApi@2a556333]">updateBooking</td> 
+<tr bgcolor="a9dace">  <td>24/07/20 12:46:47</td>   <td>6048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateToken.generateTokenPOJO()[pri:0, instance:HotelBooking.CreateToken@2a742aa2]">generateTokenPOJO</td> 
   <td>main@278934944</td>   <td></td> </tr>
 </table>
