--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,578</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,604</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">CRUD.HotelBookerApi</td><td><a href="#m0">createBooking</a></td><td rowspan="1">1720324952560</td><td rowspan="1">1339</td></tr><tr class="passedeven"><td><a href="#m1">createToken</a></td><td rowspan="1">1720324946993</td><td rowspan="1">5542</td></tr><tr class="passedeven"><td><a href="#m2">getBooking</a></td><td rowspan="1">1720324953901</td><td rowspan="1">1366</td></tr><tr class="passedeven"><td><a href="#m3">updateBooking</a></td><td rowspan="1">1720324955270</td><td rowspan="1">1327</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">HotelBooking.CreateToken</td><td><a href="#m0">generateToken</a></td><td rowspan="1">1721459801037</td><td rowspan="1">6034</td></tr><tr class="passedeven"><td><a href="#m1">generateTokenPOJO</a></td><td rowspan="1">1721459807085</td><td rowspan="1">2721</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">CRUD.HotelBookerApi#createBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">CRUD.HotelBookerApi#createToken</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">CRUD.HotelBookerApi#getBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">CRUD.HotelBookerApi#updateBooking</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">HotelBooking.CreateToken#generateToken</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">HotelBooking.CreateToken#generateTokenPOJO</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
