--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse--190154680\testng-customsuite.xml</span>
+                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-1849716656\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="CRUD.HotelBookerApi" hash-for-method="createBooking">createBooking</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateToken">generateToken</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="CRUD.HotelBookerApi" hash-for-method="createToken">createToken</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="CRUD.HotelBookerApi" hash-for-method="getBooking">getBooking</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="CRUD.HotelBookerApi" hash-for-method="updateBooking">updateBooking</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenPOJO">generateTokenPOJO</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,35 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">CRUD.HotelBookerApi</span>
+              <span class="class-name">HotelBooking.CreateToken</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createBooking">
-                  </a> <!-- createBooking -->
-                  <span class="method-name">createBooking</span>
+                  <a name="generateToken">
+                  </a> <!-- generateToken -->
+                  <span class="method-name">generateToken</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="createToken">
-                  </a> <!-- createToken -->
-                  <span class="method-name">createToken</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getBooking">
-                  </a> <!-- getBooking -->
-                  <span class="method-name">getBooking</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="updateBooking">
-                  </a> <!-- updateBooking -->
-                  <span class="method-name">updateBooking</span>
+                  <a name="generateTokenPOJO">
+                  </a> <!-- generateTokenPOJO -->
+                  <span class="method-name">generateTokenPOJO</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -173,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse--190154680\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-1849716656\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;CRUD.HotelBookerApi&quot;/&gt;
+      &lt;class name=&quot;HotelBooking.CreateToken&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -222,28 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createToken')
-data.setCell(0, 2, 'CRUD.HotelBookerApi')
-data.setCell(0, 3, 5542);
+data.setCell(0, 1, 'generateToken')
+data.setCell(0, 2, 'HotelBooking.CreateToken')
+data.setCell(0, 3, 6034);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getBooking')
-data.setCell(1, 2, 'CRUD.HotelBookerApi')
-data.setCell(1, 3, 1366);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createBooking')
-data.setCell(2, 2, 'CRUD.HotelBookerApi')
-data.setCell(2, 3, 1339);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'updateBooking')
-data.setCell(3, 2, 'CRUD.HotelBookerApi')
-data.setCell(3, 3, 1327);
+data.setCell(1, 1, 'generateTokenPOJO')
+data.setCell(1, 2, 'HotelBooking.CreateToken')
+data.setCell(1, 3, 2721);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -269,26 +237,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">CRUD.HotelBookerApi</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">HotelBooking.CreateToken</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setBaseURI</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">createToken</span>
-                <span class="method-start">933 ms</span>
+                <span class="method-name">generateToken</span>
+                <span class="method-start">786 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">createBooking</span>
-                <span class="method-start">6500 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getBooking</span>
-                <span class="method-start">7841 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">updateBooking</span>
-                <span class="method-start">9210 ms</span>
+                <span class="method-name">generateTokenPOJO</span>
+                <span class="method-start">6834 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
