--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-1849716656\testng-customsuite.xml</span>
+                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse--1397876967\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateToken">generateToken</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenGSON">generateTokenGSON</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenPOJO">generateTokenPOJO</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenUsingMapper">generateTokenUsingMapper</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,9 +137,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="generateToken">
-                  </a> <!-- generateToken -->
-                  <span class="method-name">generateToken</span>
+                  <a name="generateTokenGSON">
+                  </a> <!-- generateTokenGSON -->
+                  <span class="method-name">generateTokenGSON</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -144,12 +149,19 @@
                   <span class="method-name">generateTokenPOJO</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="generateTokenUsingMapper">
+                  </a> <!-- generateTokenUsingMapper -->
+                  <span class="method-name">generateTokenUsingMapper</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-1849716656\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse--1397876967\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,20 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'generateToken')
+data.setCell(0, 1, 'generateTokenGSON')
 data.setCell(0, 2, 'HotelBooking.CreateToken')
-data.setCell(0, 3, 6034);
+data.setCell(0, 3, 5358);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'generateTokenPOJO')
 data.setCell(1, 2, 'HotelBooking.CreateToken')
-data.setCell(1, 3, 2721);
+data.setCell(1, 3, 2374);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'generateTokenUsingMapper')
+data.setCell(2, 2, 'HotelBooking.CreateToken')
+data.setCell(2, 3, 1469);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -243,12 +259,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">generateToken</span>
-                <span class="method-start">786 ms</span>
+                <span class="method-name">generateTokenGSON</span>
+                <span class="method-start">1019 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">generateTokenPOJO</span>
-                <span class="method-start">6834 ms</span>
+                <span class="method-start">6395 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">generateTokenUsingMapper</span>
+                <span class="method-start">8782 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
