--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-183273126\testng-customsuite.xml</span>
+                    <span>C:\Users\hp\AppData\Local\Temp\testng-eclipse-1345567709\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenGSON">generateTokenGSON</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenPOJO">generateTokenPOJO</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="HotelBooking.CreateToken" hash-for-method="generateTokenUsingMapper">generateTokenUsingMapper</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="APITests.DataDrivenAPITest" hash-for-method="dataDriven1">dataDriven1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +132,32 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">HotelBooking.CreateToken</span>
+              <span class="class-name">APITests.DataDrivenAPITest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="generateTokenGSON">
-                  </a> <!-- generateTokenGSON -->
-                  <span class="method-name">generateTokenGSON</span>
+                  <a name="dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">
+                  </a> <!-- dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1) -->
+                  <span class="method-name">dataDriven</span>
+                  <span class="parameters">(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="generateTokenPOJO">
-                  </a> <!-- generateTokenPOJO -->
-                  <span class="method-name">generateTokenPOJO</span>
+                  <a name="dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)">
+                  </a> <!-- dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1) -->
+                  <span class="method-name">dataDriven</span>
+                  <span class="parameters">(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="generateTokenUsingMapper">
-                  </a> <!-- generateTokenUsingMapper -->
-                  <span class="method-name">generateTokenUsingMapper</span>
+                  <a name="dataDriven1">
+                  </a> <!-- dataDriven1 -->
+                  <span class="method-name">dataDriven1</span>
+                  <em>
+(JacksonEg)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-183273126\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hp\AppData\Local\Temp\testng-eclipse-1345567709\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +174,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;HotelBooking.CreateToken&quot;/&gt;
+      &lt;class name=&quot;APITests.DataDrivenAPITest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,22 +216,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'generateTokenGSON')
-data.setCell(0, 2, 'HotelBooking.CreateToken')
-data.setCell(0, 3, 5675);
+data.setCell(0, 1, 'dataDriven')
+data.setCell(0, 2, 'APITests.DataDrivenAPITest')
+data.setCell(0, 3, 11);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'generateTokenPOJO')
-data.setCell(1, 2, 'HotelBooking.CreateToken')
-data.setCell(1, 3, 2074);
+data.setCell(1, 1, 'dataDriven1')
+data.setCell(1, 2, 'APITests.DataDrivenAPITest')
+data.setCell(1, 3, 9);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'generateTokenUsingMapper')
-data.setCell(2, 2, 'HotelBooking.CreateToken')
-data.setCell(2, 3, 1344);
+data.setCell(2, 1, 'dataDriven')
+data.setCell(2, 2, 'APITests.DataDrivenAPITest')
+data.setCell(2, 3, 6);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 26 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,22 +257,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">HotelBooking.CreateToken</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setBaseURI</span>
+              <div class="chronological-class-name">APITests.DataDrivenAPITest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">dataDriven(786, Mukesh, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">generateTokenGSON</span>
-                <span class="method-start">930 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">generateTokenPOJO</span>
-                <span class="method-start">6638 ms</span>
+                <span class="method-name">dataDriven(787, Jayanta, Mukesh, Mandal, mukesh@gmail.com, mukesh@123, 9090909090, 1)</span>
+                <span class="method-start">16 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">generateTokenUsingMapper</span>
-                <span class="method-start">8724 ms</span>
+                <span class="method-name">dataDriven1</span>
+                <span class="method-start">36 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
