--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66a57e">  <td>24/07/21 12:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateToken.generateTokenGSON()[pri:0, instance:HotelBooking.CreateToken@2173f6d9]">generateTokenGSON</td> 
-  <td>main@345281752</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>24/07/21 12:16:38</td>   <td>5695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateToken.generateTokenPOJO()[pri:0, instance:HotelBooking.CreateToken@2173f6d9]">generateTokenPOJO</td> 
-  <td>main@345281752</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>24/07/21 12:16:40</td>   <td>7794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateToken.generateTokenUsingMapper()[pri:0, instance:HotelBooking.CreateToken@2173f6d9]">generateTokenUsingMapper</td> 
-  <td>main@345281752</td>   <td></td> </tr>
-<tr bgcolor="66a57e">  <td>24/07/21 12:16:32</td>   <td>-920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateToken.setBaseURI()[pri:0, instance:HotelBooking.CreateToken@2173f6d9]">&gt;&gt;setBaseURI</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@345281752</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven(int,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven</td> 
+  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven(int,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven</td> 
+  <td>main@278934944</td>   <td></td> </tr>
+<tr bgcolor="66a57e">  <td>24/07/28 08:59:22</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenAPITest.dataDriven1()[pri:2, instance:APITests.DataDrivenAPITest@4232c52b]">dataDriven1</td> 
+  <td>main@278934944</td>   <td></td> </tr>
 </table>
